--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -57,3 +57,19 @@ code {
 .content .by {
   font-weight: bold;
 }
+
+
+
+/* index CSS */
+li.tweet {
+  list-style-type: none;
+  color: hsl(200, 70%, 50%);
+  padding-bottom: 10px;
+}
+.tweet img {
+  float: left;
+  margin-right: 10px;
+}
+.tweet .name {
+  font-weight: bold;
+}
