--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,11 @@
 
       <!-- display tweets here -->
       {% for tweet in tweets %}
-        <li>{{tweet.content}}</li>
+        <li class="tweet">
+          <img src="https://pbs.twimg.com/profile_images/2450268678/olxp11gnt09no2y2wpsh_normal.jpeg">
+          <p class="name">{{tweet.name}}</p>
+          <p>{{tweet.content}}</p>
+        </li>
       {% endfor %}
 
     </div>
