--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -64,12 +64,13 @@ code {
 li.tweet {
   list-style-type: none;
   color: hsl(200, 70%, 50%);
-  padding-bottom: 10px;
+  /*padding-bottom: 10px;*/
+  margin-bottom: 20px;
 }
 .tweet img {
   float: left;
   margin-right: 10px;
 }
-.tweet .name {
+.tweet .user {
   font-weight: bold;
 }
