--- a/views/index.html
+++ b/views/index.html
@@ -17,8 +17,8 @@
       {% for tweet in tweets %}
         <li class="tweet">
           <img src="https://pbs.twimg.com/profile_images/2450268678/olxp11gnt09no2y2wpsh_normal.jpeg">
-          <p class="name">{{tweet.name}}</p>
-          <p>{{tweet.content}}</p>
+          <a href="/users/{{ tweet.name }}" class="user">{{tweet.name}}</a><br>
+          <a href="/tweets/{{ tweet.id }}">{{tweet.content}}</a>
         </li>
       {% endfor %}
 
