--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,18 @@
       100 followers
     </div>
     <div class="col-md-9">
+      <!-- post a new tweet -->
+      {% if showForm %}
+        <form action="/tweets" method="POST">
+          <label for="name_field">Name:</label>
+          <input name="name" type="text" id="name_field" value="{{ name }}"/>
+
+          <label for="text_field">Text:</label>
+          <input name="text" type="text" id="text_field" style="width: 350px;" />
+
+          <input type="submit" value="Submit" />
+        </form>
+      {% endif %}
 
       <!-- display tweets here -->
       {% for tweet in tweets %}
