--- a/views/index.html
+++ b/views/index.html
@@ -26,13 +26,15 @@
       {% endif %}
 
       <!-- display tweets here -->
-      {% for tweet in tweets %}
+      <div class="tweet-box">
+        {% for tweet in tweets %}
         <li class="tweet">
           <img src="https://pbs.twimg.com/profile_images/2450268678/olxp11gnt09no2y2wpsh_normal.jpeg">
           <a href="/users/{{ tweet.name }}" class="user">{{tweet.name}}</a><br>
           <a href="/tweets/{{ tweet.id }}">{{tweet.content}}</a>
         </li>
-      {% endfor %}
+        {% endfor %}
+      </div>
 
     </div>
   </div>
