--- a/views/index.html
+++ b/views/index.html
@@ -29,7 +29,7 @@
       <div class="tweet-box">
         {% for tweet in tweets %}
         <li class="tweet">
-          <img src="https://pbs.twimg.com/profile_images/2450268678/olxp11gnt09no2y2wpsh_normal.jpeg">
+          <img />
           <a href="/users/{{ tweet.name }}" class="user">{{tweet.name}}</a><br>
           <a href="/tweets/{{ tweet.id }}">{{tweet.content}}</a>
         </li>
